add fluentbit article

--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -13,7 +13,7 @@ resources, I was an early adopter of Azure, making all the mistakes along the wa
 I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers and Kubernetes. 
 
 My interest lies in any topic or tool that allows us to make better decisions about the Cloud. These
-decisions can often be intricate and ultimately result in compromises between 
+decisions can often be intricate and result in compromises between 
 maintainability, cost and techical maturity. Over time I've become less enthuastic about 
 proprietary solutions and more interested in open standards.
 
