remove test for build

--- a/src/data/blog/linode-s3-fluentbit-exporter.mdx
+++ b/src/data/blog/linode-s3-fluentbit-exporter.mdx
@@ -1,7 +1,7 @@
 ---
 title: Exporting Kubernetes Logs to Linode S3 using FluentBit
 date: '2024-06-25'
-tags: ['linode', 'devops', 'kubernetes', 'logging', 'fluent-bit']
+tags: ['linode', 'devops', 'kubernetes', 'logging', 'fluent-bit', 's3']
 draft: false
 summary: Overview of how to export logs from Kubernetes to Linode S3 using FluentBit.
 ---
