change author note

--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -6,14 +6,15 @@ linkedin: https://www.linkedin.com/in/sebastian-smith-85775515a/
 github: https://github.com/horizonmode
 ---
 
-I am a a Cloud and DevOps enthusiast with over 15 years of experience in the industry.
-My background is in Web Development, but due to working unsupported on short-term projects with no dedicated infrastructure 
-resources, I was an early adopter of Azure, making all the mistakes along the way. 
+I am a Next-JS Developer, DevOps and Cloud Enthusiast, Father, and Cynic. I have almost 20 years of experience in the industry.
+My background was originally .Net Web Development, but evolved towards React and Next.JS via a raft of intermediate 
+technologies. Due to working unsupported on short-term projects with no dedicated infrastructure 
+resources, I was an early adopter of Azure and AWS, making all the mistakes along the way.
 
-I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers and Kubernetes. 
+I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers and Kubernetes.
 
-My interest lies in any topic or tool that allows us to make better decisions about the Cloud. These
-decisions can often be intricate and result in compromises between 
+My interest lies in any topic or tool that allows us to make better techincal decisions. 
+These decisions can often be intricate and result in compromises between 
 maintainability, cost and techical maturity. Over time I've become less enthuastic about 
 proprietary solutions and more interested in open standards.
 
