switch png for webp

--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: Overview of pipeline design for deploying Next-JS to Azure Static Web Apps using GitHub Actions
 ---
 
-![Next-JS and SWA](/static/images/next_swa.png)
+![Next-JS and SWA](/static/images/next_swa.webp)
 
 
 In the second part of this series, we will look at deploying Next-JS to 
