--- a/src/data/blog/next-js-on-azure/next-js-on-azure.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: Evaluating options for deploying a Next-JS app on Azure
 ---
 
-![Next-JS Logo](/static/images/next.png)
+![Next-JS Logo](/static/images/next.webp)
 
 In a multi-part series I will explore options and methods for deploying Next-JS on Azure. 
 Next.JS being closely aligned with Vercel, offers a seamless deployment experience. 
