--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -11,7 +11,7 @@ My background was originally .Net Web Development, but evolved towards React and
 technologies. Due to working on short-term projects with no dedicated infrastructure 
 resources, I was an early adopter of Azure and AWS, making all the mistakes along the way.
 
-I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers, Kubernetes and Stateless Web Apps.
+I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers, Kubernetes and Serverless.
 
 My interest lies in any topic or tool that allows us to make better techincal decisions. 
 These decisions can often be intricate and result in compromises between 
