improve blitz image

--- a/src/data/blog/blitz-gym.mdx
+++ b/src/data/blog/blitz-gym.mdx
@@ -33,7 +33,7 @@ workout plan, the exercises, the timings, and the order of the stations.
 
 ## Design
 
-![Architecture](/static/images/blitz.svg)
+![Architecture](/static/images/blitz_arch.png)
 
 ### Components
 
