--- a/src/data/blog/blitz-gym.mdx
+++ b/src/data/blog/blitz-gym.mdx
@@ -1,10 +1,12 @@
 ---
-title: Blitz Gym - A Fitness App for Circuits and HIIT
+title: Blitz Gym - Automated HIIT Classes
 date: '2023-08-01'
 tags: ['azure', 'signalR', 'flutter', 'storage', 'static-web-apps', 'cosmos-db', 'blitz-gym']
 draft: false
 summary: Design and Architecture of a Fitness App using Flutter, Azure Static Web Apps, SignalR, and Cosmos DB
 ---
+
+![Banner](/static/images/gym.jpeg)
 
 [Blitz](https://www.blitzhiit.co.uk/) was designed as new style of semi-automated gym, 
 focusing on circuits and HIIT. The gym space
