--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -6,16 +6,16 @@ linkedin: https://www.linkedin.com/in/sebastian-smith-85775515a/
 github: https://github.com/horizonmode
 ---
 
-I'm a Developer, DevOps enthusiast, Father, and cynic. I have almost 20 years of experience in the industry.
+I'm a Developer, DevOps enthusiast, Father and Skeptic. I have over 15 years of experience in the Software Industry.
 My background was originally .Net Web Development, but evolved towards React and Next.JS via a raft of intermediate 
 technologies. Due to working on short-term projects with no dedicated infrastructure 
 resources, I was an early adopter of Azure and AWS, making all the mistakes along the way.
 
 I've seen first-hand the migration from Physical Servers to VMs, Cloud PaaS and now Cloud Native, Containers, Kubernetes and Serverless.
 
-My interest lies in any topic or tool that allows us to make better techincal decisions. 
+My interest lies in any topic or tool that allows us to make better technical decisions. 
 These decisions can often be intricate and result in compromises between 
-maintainability, cost and techical maturity. Over time I've become less enthuastic about 
+maintainability, cost and technical maturity. Over time I've become less enthusiastic about 
 proprietary solutions and more interested in open standards.
 
 Having worked in small teams and companies, I'm also interested in any
