--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -6,7 +6,7 @@ linkedin: https://www.linkedin.com/in/sebastian-smith-85775515a/
 github: https://github.com/horizonmode
 ---
 
-I'm a Developer, DevOps enthusiast, Father and Skeptic. I have over 15 years of experience in the Software Industry.
+I'm a Developer, DevOps enthusiast, Father and Pragmatist. I have over 15 years of experience in the Software Industry.
 My background was originally .Net Web Development, but evolved towards React and Next.JS via a raft of intermediate 
 technologies. Due to working on short-term projects with no dedicated infrastructure 
 resources, I was an early adopter of Azure and AWS, making all the mistakes along the way.
