--- a/src/data/blog/international-rugby-experience.mdx
+++ b/src/data/blog/international-rugby-experience.mdx
@@ -1,7 +1,7 @@
 ---
 title: International Rugby Experience x OMM
 date: '2022-02-01'
-tags: ['azure', 'react', 'microservices', 'kubernetes', 'unity', 'mqtt']
+tags: ['azure', 'react', 'dapr', 'kubernetes', 'unity', 'mqtt', 'electron']
 draft: false
 summary: Design and Architecture of an interactive system for the International Rugby Experience
 ---
