Add article on scale to zero

--- a/src/data/blog/github-actions-pipeline-design-pr.mdx
+++ b/src/data/blog/github-actions-pipeline-design-pr.mdx
@@ -1,7 +1,7 @@
 ---
 title: Designing DevOps Pipelines for Pull Requests in a Feature-Branch Workflow
 date: '2024-01-20'
-tags: ['bnmp', 'devops', 'github-actions', 'infastructure-as-code', 'strategy']
+tags: ['bpmn', 'devops', 'github-actions', 'infastructure-as-code', 'strategy']
 draft: false
 summary: Analysis and Design of CI/CD Pipelines for Pull Requests in a Feature-Branch Workflow
 ---
