--- a/src/data/blog/github-actions-pipeline-design.mdx
+++ b/src/data/blog/github-actions-pipeline-design.mdx
@@ -1,7 +1,7 @@
 ---
 title: Designing DevOps Pipelines for the Main Branch in a Feature-Branch Workflow
 date: '2024-01-13'
-tags: ['bnmp', 'devops', 'github-actions', 'infastructure-as-code', 'strategy']
+tags: ['bpmn', 'devops', 'github-actions', 'infastructure-as-code', 'strategy']
 draft: false
 summary: Analysis and Design of CI/CD Pipelines for the Main Branch in a Feature-Branch Workflow
 ---
