--- a/src/data/blog/azure/container-apps.mdx
+++ b/src/data/blog/azure/container-apps.mdx
@@ -34,7 +34,7 @@ To enable Scale to Zero for your Azure Container App, you can the revisions
 feature of Azure Container Apps. A revision has scaling settings that control 
 how many instances of the app are running and triggers that control up or down-scaling events.
 
-Here is an example of how you can configure a revision to enable Scale to Zero:
+Here is an example of how you can configure a revision to enable Scale to Zero using an ARM template:
 
 ```json
 {
