--- a/src/data/authors/default.mdx
+++ b/src/data/authors/default.mdx
@@ -6,8 +6,8 @@ linkedin: https://www.linkedin.com/in/sebastian-smith-85775515a/
 github: https://github.com/horizonmode
 ---
 
-I'm a Developer and DevOps enthusiast with over 15 years of experience in the Software Industry.
-My background was originally .Net Web Development, but evolved towards React and Next.JS via a raft of intermediate 
+I'm a Developer, DevOps and SRE enthusiast with over 15 years of experience in the Software Industry.
+My background was originally .Net Web Development, but evolved into Full Stack Javascript, Flutter and Cloud Native via a raft of intermediate 
 technologies. Due to working on short-term projects with no dedicated infrastructure 
 resources, I was an early adopter of Azure and AWS, making all the mistakes along the way.
 
