--- a/src/data/blog/kubernetes/vertical-pod-autoscaler.mdx
+++ b/src/data/blog/kubernetes/vertical-pod-autoscaler.mdx
@@ -1,9 +1,9 @@
 ---
 title: Using the Vertical Pod Autoscaler (VPA) in Kubernetes
-date: '2025-09-09'
+date: '2025-09-10'
 tags: ['linode', 'devops', 'kubernetes', 'autoscale']
 draft: false
-summary: The role of the Vertical Pod Autoscaler for single-replica deployments.
+summary: The role of the Vertical Pod Autoscaler.
 ---
 
 We manage a Kubernetes cluster with a mix of deployments. These include static sites, web applications and utilities.
